--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: docker:stable
 
-services:
-  - docker:dind
+# services:
+#   - docker:dind
 
 stages:
   # - test
@@ -23,7 +23,7 @@ build_job:
   only:
     - master
   script:
-    - apk add --no-cache docker-compose
+    # - apk add --no-cache docker-compose
     - docker-compose up --build -d lincolns_dictionary
   tags:
     - ci
