--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ stages:
 #   tags: 
 #     - ci
 
-build_job:
+build:
   stage: build
   only:
     - master
@@ -23,6 +23,7 @@ build_job:
     - apk add --no-cache docker-compose
     - docker-compose up --build -d lincolns_dictionary
     - echo cleaning images
+    - echo $REACT_APP_DICTIONARY_API $REACT_APP_WORDTRACKER_API $NGINX_WORD_TRACKER_API $NGINX_DICTIONARY_API $NGINX_PORT >> "$(pwd)/.env" 
     - docker system prune -f
   tags:
     - ci
