--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ build:
     - master
   script:
     - apk add --no-cache docker-compose
-    - echo $REACT_APP_DICTIONARY_API $REACT_APP_WORDTRACKER_API $NGINX_WORD_TRACKER_API $NGINX_DICTIONARY_API $NGINX_PORT >> "$(pwd)/.env" 
+    - echo "$REACT_APP_DICTIONARY_API $REACT_APP_WORDTRACKER_API $NGINX_WORD_TRACKER_API $NGINX_DICTIONARY_API $NGINX_PORT" > "$(pwd)/.env" 
     - docker-compose up --build -d lincolns_dictionary
     - echo cleaning images
     - docker system prune -f
