--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node:alpine as build
+FROM node:alpine
 WORKDIR /app
 COPY package.json .
 RUN npm install
@@ -9,7 +9,7 @@ RUN npm run build
 
 # production environment
 FROM nginx:latest
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=0 /app/build /usr/share/nginx/html
 # COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 ARG NGINX_WORD_TRACKER_API
