--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.7"
 services:
   lincolns_dictionary:
     container_name: lincolnsDictionary
+    env_file: .env
     build:
       context: .
       dockerfile: Dockerfile.prod
