--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,12 +22,19 @@ build:
     - apk add --no-cache docker-compose
     - echo "REACT_APP_DICTIONARY_API=$REACT_APP_DICTIONARY_API" > $(pwd)/.env 
     - echo "REACT_APP_WORDTRACKER_API=$REACT_APP_WORDTRACKER_API" >>  $(pwd)/.env 
-    - echo "NGINX_DICTIONARY_API=$NGINX_DICTIONARY_API" >> $(pwd)/.env
-    - echo "NGINX_WORD_TRACKER_API=$NGINX_WORD_TRACKER_API" >> $(pwd)/.env 
-    - echo "NGINX_PORT=$NGINX_PORT" >> $(pwd)/.env 
-    - cat $(pwd)/.env
-    - docker-compose up --build -d lincolns_dictionary
+    - docker-compose build lincolns_dictionary
+    - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+    - docker push raju6713/lincolns_dictionary:latest
     - echo cleaning images
     - docker system prune -f
+  tags:
+    - ci
+  
+deploy:
+  stage: deploy
+  script:
+    docker run --name=dictionary --env-file=.env -p 3006:80 raju6713/lincolns_dictionary 
+  only:
+    - master
   tags:
     - ci
