--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.7"
 services:
   lincolns_dictionary:
     container_name: lincolnsDictionary
+    image: raju6713/lincolns_dictionary
     env_file: .env
     build:
       context: .
@@ -10,14 +11,10 @@ services:
       args: 
         - REACT_APP_DICTIONARY_API=$REACT_APP_DICTIONARY_API
         - REACT_APP_WORDTRACKER_API=$REACT_APP_WORDTRACKER_API
-        - NGINX_WORD_TRACKER_API=$NGINX_WORD_TRACKER_API
-        - NGINX_DICTIONARY_API=$NGINX_DICTIONARY_API
-        - NGINX_PORT=$NGINX_PORT
     ports:
       - 3006:80
     environment:
       - TZ=Asia/Kolkata
-      - CHOKIDAR_USEPOLLING=true
     restart: unless-stopped
 
   lincolns_dictionary_dev:
