--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,7 @@ build:
   
 deploy:
   stage: deploy
+  image: docker:stable
   script:
     - if [ "$(docker ps -a | grep dictionary)" ]; then docker stop dictionary; fi
     - docker run --rm --name=dictionary -e NGINX_PORT=${NGINX_PORT} -e NGINX_DICTIONARY_API=${NGINX_DICTIONARY_API} -e NGINX_WORD_TRACKER_API=${NGINX_WORD_TRACKER_API} -p 3006:80 raju6713/lincolns_dictionary
