--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,8 +37,8 @@ deploy:
   script:
     - docker pull raju6713/lincolns_dictionary
     # - if [ "$(docker ps -a | grep dictionary)" ]; then docker stop dictionary; fi
-    - docker stop ${dictionay} || true && docker rm ${dictionay} || true
-    - docker run -d -e NGINX_PORT=${NGINX_PORT} -e NGINX_DICTIONARY_API=${NGINX_DICTIONARY_API} -e NGINX_WORD_TRACKER_API=${NGINX_WORD_TRACKER_API} -p 3006:80 --name=${dictionay} raju6713/lincolns_dictionary
+    - docker stop ${APP_NAME} || true && docker rm ${APP_NAME} || true
+    - docker run -d -e NGINX_PORT=${NGINX_PORT} -e NGINX_DICTIONARY_API=${NGINX_DICTIONARY_API} -e NGINX_WORD_TRACKER_API=${NGINX_WORD_TRACKER_API} -p 3006:80 --name=${APP_NAME} raju6713/lincolns_dictionary
   only:
     - master
   tags:
