--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,3 +22,13 @@
 #   }
 
 # }
+
+server {
+    listen 80;
+
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri /index.html;
+    }
+}
